Calculator can now take in input from the GUI. And output solutions